--- a/p1ch8/1_convolution.ipynb
+++ b/p1ch8/1_convolution.ipynb
@@ -889,14 +889,18 @@
         "        out = self.fc2(out)\n",
         "        return out"
       ],
-      "execution_count": null,
+      "execution_count": 57,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "klBpxEyJVI7P",
-        "outputId": "59c57a3f-980b-4a27-8d33-e058d45725fe"
+        "outputId": "c45edab1-fa39-4630-c345-65f138139353",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        }
       },
       "source": [
         "model = Net()\n",
@@ -904,7 +908,7 @@
         "numel_list = [p.numel() for p in model.parameters()]\n",
         "sum(numel_list), numel_list"
       ],
-      "execution_count": null,
+      "execution_count": 58,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -916,7 +920,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 27
+          "execution_count": 58
         }
       ]
     },
@@ -944,32 +948,36 @@
         "        out = self.fc2(out)\n",
         "        return out"
       ],
-      "execution_count": null,
+      "execution_count": 59,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "oE0ChPciVI7T",
-        "outputId": "561de18c-e4c0-4d39-a15a-2033591528fe"
+        "outputId": "856f55e9-d9b7-40e1-d142-8f83d5f95523",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        }
       },
       "source": [
         "model = Net()\n",
         "model(img.unsqueeze(0))"
       ],
-      "execution_count": null,
+      "execution_count": 60,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "tensor([[-0.0157,  0.1143]], grad_fn=<AddmmBackward>)"
+              "tensor([[0.1637, 0.0450]], grad_fn=<AddmmBackward>)"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 29
+          "execution_count": 60
         }
       ]
     },
@@ -1003,14 +1011,18 @@
         "                datetime.datetime.now(), epoch,\n",
         "                loss_train / len(train_loader)))  # <10>"
       ],
-      "execution_count": null,
+      "execution_count": 61,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "6IJicWBmVI7X",
-        "outputId": "f91d9a69-46be-4bce-a36f-9a5ba8c30e18"
+        "outputId": "4befad86-38f1-4349-b0a8-98699e3c7cfb",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 204
+        }
       },
       "source": [
         "train_loader = torch.utils.data.DataLoader(cifar2, batch_size=64,\n",
@@ -1028,22 +1040,22 @@
         "    train_loader = train_loader,\n",
         ")"
       ],
-      "execution_count": null,
+      "execution_count": 62,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "2020-01-16 23:07:21.889707 Epoch 1, Training loss 0.5634813266954605\n",
-            "2020-01-16 23:07:37.560610 Epoch 10, Training loss 0.3277610331109375\n",
-            "2020-01-16 23:07:54.966180 Epoch 20, Training loss 0.3035225479086493\n",
-            "2020-01-16 23:08:12.361597 Epoch 30, Training loss 0.28249378549824855\n",
-            "2020-01-16 23:08:29.769820 Epoch 40, Training loss 0.2611226033253275\n",
-            "2020-01-16 23:08:47.185401 Epoch 50, Training loss 0.24105800626574048\n",
-            "2020-01-16 23:09:04.644522 Epoch 60, Training loss 0.21997178820477928\n",
-            "2020-01-16 23:09:22.079625 Epoch 70, Training loss 0.20370126601047578\n",
-            "2020-01-16 23:09:39.593780 Epoch 80, Training loss 0.18939699422401987\n",
-            "2020-01-16 23:09:57.111441 Epoch 90, Training loss 0.17283396527266046\n",
-            "2020-01-16 23:10:14.632351 Epoch 100, Training loss 0.1614033816868712\n"
+            "2020-10-02 02:25:30.085006 Epoch 1, Training loss 0.6017415284351179\n",
+            "2020-10-02 02:26:09.708866 Epoch 10, Training loss 0.3378541732479812\n",
+            "2020-10-02 02:26:53.937378 Epoch 20, Training loss 0.2981453125074411\n",
+            "2020-10-02 02:27:38.036576 Epoch 30, Training loss 0.2731948306036603\n",
+            "2020-10-02 02:28:24.765713 Epoch 40, Training loss 0.25587700743963765\n",
+            "2020-10-02 02:29:09.189632 Epoch 50, Training loss 0.23687528320558512\n",
+            "2020-10-02 02:29:53.744101 Epoch 60, Training loss 0.22041084802454444\n",
+            "2020-10-02 02:30:37.956669 Epoch 70, Training loss 0.20684784513180424\n",
+            "2020-10-02 02:31:21.593741 Epoch 80, Training loss 0.19378792670122377\n",
+            "2020-10-02 02:32:05.315684 Epoch 90, Training loss 0.18152410940379854\n",
+            "2020-10-02 02:32:49.713628 Epoch 100, Training loss 0.17045888418604613\n"
           ],
           "name": "stdout"
         }
